// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile_all compiles files to out-dir 1`] = `
Array [
  "compile.js",
  "compile.test.js",
  "files.js",
  "files.test.js",
  "index.js",
  "index.test.js",
  "logging.js",
  "logging.test.js",
  "yargs.js",
]
`;

exports[`compile_all ignores files 1`] = `
Array [
  "compile.js",
  "files.js",
  "index.js",
  "logging.js",
  "yargs.js",
]
`;
